# YAGO

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  STRUCTURE.md  YAGO.code-workspace  package-lock.json  package.json
assets/: hashes.json
build_tools/: appimage-builder.yml  build-all.sh  build-appimage.sh  build-deb.sh  build-flatpak.sh  build-helper.sh  build-pkgbuild.sh  build-rpm.sh  build-test-assets.sh  build-windows.sh  cleanup.sh  finish-appimage.sh  run-builds.sh  setup-build-containers.sh  setup-wine-env.sh  sync_env.py  utils.sh
build_tools/hk4e_global/: config_info  tracked_files  version
build_tools/test_assets/: fake_process.rs
crates/fs_engine/: Cargo.toml
crates/fs_engine/src/: archive.rs  error.rs  inspector.rs  lib.rs  safety.rs  transcoder.rs  vfs.rs
crates/fs_engine/tests/: archives.rs  failures.rs  path_diag.rs  safety.rs  transcoder.rs  version_tests.rs  vfs.rs
crates/ini_forge/: Cargo.toml
crates/ini_forge/src/: ast.rs  compiler.rs  error.rs  lib.rs  parser.rs  patcher.rs
crates/ini_forge/tests/: compiler.rs  logic.rs  parser.rs  patcher.rs
crates/integration_tests/: Cargo.toml
crates/integration_tests/src/: asset_protocol.rs  context.rs  lib.rs  sim_downloader.rs  sim_gallery.rs  sim_mod_management.rs  sim_patching.rs  simulation.rs
crates/integration_tests/src/flows/: deployment.rs  launch_system.rs  mod_management.rs
crates/librarian/: Cargo.toml
crates/librarian/src/: catalog.rs  cloud.rs  discovery.rs  error.rs  import.rs  lib.rs  models.rs  queries.rs  scanner.rs  settings.rs  storage.rs  template.rs
crates/librarian/src/gamedata/: hash_db.rs  mod.rs
crates/librarian/tests/: corruption.rs  discovery.rs  queries.rs  storage.rs  templates.rs
crates/loader_ctl/: Cargo.toml
crates/loader_ctl/src/: context.rs  error.rs  lib.rs
crates/loader_ctl/src/assets/: shield.c
crates/loader_ctl/tests/: deployment.rs  patching.rs
crates/logic_weaver/: Cargo.toml
crates/logic_weaver/src/: compiler.rs  dxbc.rs  error.rs  ini_merger.rs  lib.rs  merger.rs  namespacer.rs  validator.rs
crates/logic_weaver/tests/: compiler.rs  conflicts.rs  dxbc.rs  merger.rs  validator.rs
crates/proc_marshal/: Cargo.toml
crates/proc_marshal/src/: error.rs  launcher.rs  lib.rs  linux.rs  manual_map.rs  monitor.rs  patcher.rs  sandbox.rs  tuner.rs  windows.rs
crates/proc_marshal/tests/: command_gen.rs  monitor.rs  patterns.rs  sandbox.rs
crates/quartermaster/: Cargo.toml
crates/quartermaster/src/: assets.rs  github.rs  lib.rs  loader.rs  proton.rs  reshade.rs
crates/quartermaster/tests/: cache.rs  downloader.rs  github.rs  loaders.rs
crates/sophon_engine/: Cargo.toml  build.rs
crates/sophon_engine/src/: client.rs  downloader.rs  error.rs  journal.rs  lib.rs  orchestrator.rs  patcher.rs  protocol.rs  provider.rs  scanner.rs  verifier.rs
crates/sophon_engine/src/proto/: sophon.proto
crates/sophon_engine/tests/: chunks.rs  downloader.rs  downloader_tests.rs  full_download.rs  hi3_test.rs  journal_tests.rs  meticulous_orchestrator.rs  orchestrator_integration.rs  protocol.rs  real_discovery.rs  scanner_tests.rs  verifier.rs
docs/: index.md
docs/dev/: architecture.md  contribution.md  ini-forge.md  logic-weaver.md  mod-json-spec.md  release-system.md  testing.md
docs/user/: getting-started.md  launcher-features.md  mod-management.md  safety.md
resources/: app_config.json
resources/templates/: genshin.json  hi3.json  hsr.json  wuwa.json  zzz.json
scripts/: setup.sh  sync-env.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  init_tests.rs  lib.rs  safety.rs
src-tauri/src/commands/: assets.rs  config.rs  download.rs  launcher.rs  library.rs  mod.rs  mods.rs  profiles.rs  setup.rs
src-ui/: README.md  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src-ui/src/: App.tsx  constants.ts  index.css  index.tsx
src-ui/src/components/: AddGameModal.tsx  ConflictModal.tsx  CoverManagerModal.tsx  GlobalSettingsModal.tsx  InstallWizard.tsx  ModManager.tsx  PanicOverlay.tsx  SettingsDrawer.tsx  SetupWizard.tsx  Sidebar.tsx  SkinManager.tsx  SystemStatusCard.tsx  TitleBar.tsx
src-ui/src/components/dashboard/: AppLayout.tsx  GameHeader.tsx  GameOverview.tsx
src-ui/src/components/mod-manager/: ModInspector.tsx  ModItems.tsx  ModManagerHeader.tsx  types.ts
src-ui/src/components/mod-manager/inspector/: ModInspectorEditor.tsx  ModInspectorFiles.tsx  ModInspectorInfo.tsx
src-ui/src/components/settings/: AdvancedSettings.tsx  GeneralSettings.tsx  InstallationSettings.tsx  LoaderManager.tsx  ManagementSettings.tsx
src-ui/src/components/skins/: CharacterCard.tsx  CycleEditor.tsx
src-ui/src/components/ui/: EditableSetting.tsx  GlobalDialogs.tsx  Tooltip.tsx  button.tsx
src-ui/src/hooks/: useAssetInstaller.ts  useFileDrop.ts  useYagoEvents.ts
src-ui/src/lib/: api.ts
src-ui/src/store/: gameStore.ts  uiStore.ts
src-ui/src/tests/: App.test.tsx  CoverManagerModal.test.tsx  ModItems.test.tsx  SettingsDrawer.test.tsx  Tooltip.test.tsx  gameStore.test.ts  setup.ts  workflows.test.ts
src-ui/src/types/: backend.d.ts  index.ts
templates/: genshin.json  hi3.json  hsr.json
testing/: mock_manifest.json
testing/fake_game/: main.rs
testing/library_samples/: phase2_verify.json  phase4_linux.json  phase5_vfs.json  valid_library.json
testing/mock_mods/invalid_mod/: mod.ini  mod.json
testing/mock_mods/simple_mod/: mod.ini  mod.json
