[package]
name = "yago"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.92.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
cc = "1.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
enigo = "0.3"

# Backend Pillars
fs_engine = { path = "../crates/fs_engine" }
librarian = { path = "../crates/librarian" }
quartermaster = { path = "../crates/quartermaster" }
ini_forge = { path = "../crates/ini_forge" }
logic_weaver = { path = "../crates/logic_weaver" }
proc_marshal = { path = "../crates/proc_marshal" }
loader_ctl = { path = "../crates/loader_ctl" }
sophon_engine = { path = "../crates/sophon_engine" }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
which = "7.0"
walkdir = "2.5.0"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"

[features]
# this feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
