[package]
license = "MIT"
name = "proc_marshal"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
loader_ctl = { path = "../loader_ctl" }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
dll-syringe = "0.15"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
] }

[dev-dependencies]
tempfile = "3.10"

