[package]
name = "quartermaster"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3" 
anyhow = "1.0"
md5 = "0.7"
# File handling
directories = "5.0"
tempfile = "3.13"
fs_engine = { path = "../fs_engine" }
